deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-portfolio-app
spec:
  replicas: 1
  selector:
    matchLabels:
     app: react-portfolio-app
  template:
    metadata:
      labels:
        app: react-portfolio-app
    spec:
      containers:
      - name: react-portfolio-app
        image: naazcontainerregistry.azurecr.io/falak:portfolio
        ports:
        - containerPort: 5173
