service.yaml
apiVersion: v1
kind: Service
metadata:
 name: react-portfolio-app
spec:
  type: ClusterIP
  selector:
    app: react-portfolio-app
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
